Fixed some header sizing/spacing

--- a/public/css/milligram.css
+++ b/public/css/milligram.css
@@ -145,11 +145,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
 }
 h1 {
-    font-size: 4.6rem;
+    font-size: 3.5rem;
     line-height: 1.2;
 }
 h2 {
-    font-size: 3.6rem;
+    font-size: 3.0rem;
     line-height: 1.25;
 }
 h3 {
