--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body {
 /*------------------Header Styles------------------*/
 
 #auth {
-    padding: 6% 0;
+    padding: 8% 0;
     letter-spacing: .1em;
 }
 #personal {
